cmake_minimum_required(VERSION 3.22.0)
#set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
project(CUBESGAME)

add_executable(${PROJECT_NAME} main.cpp game.cpp chunk.cpp texture.cpp stb_image.cpp shader.cpp resourceManager.cpp chunkManager.cpp chunkGenerator.cpp physics.cpp blockIndicator.cpp heldBlock.cpp) 
configure_file(cube.vert cube.vert COPYONLY)
configure_file(cube.frag cube.frag COPYONLY)
configure_file(water.vert water.vert COPYONLY)
configure_file(water.frag water.frag COPYONLY)
configure_file(foliage.vert foliage.vert COPYONLY)
configure_file(foliage.frag foliage.frag COPYONLY)
configure_file(blockIndicator.vert blockIndicator.vert COPYONLY)
configure_file(blockIndicator.frag blockIndicator.frag COPYONLY)
configure_file(heldBlock.vert heldBlock.vert COPYONLY)
configure_file(heldBlock.frag heldBlock.frag COPYONLY)
configure_file(textureAtlas.png textureAtlas.png COPYONLY)
add_subdirectory(glad/)
add_subdirectory(GLFW/)
add_subdirectory(glm/)
target_link_libraries(${PROJECT_NAME} PRIVATE glad glfw glm)

